feat : LottoTest 테스트 코드 추가 밎 수정